syntax = "proto3";
package heron.proto.scheduler;

option java_package = "com.twitter.heron.proto.scheduler";
option java_outer_classname = "Scheduler";

import "common.proto";
import "packing_plan.proto";

message SchedulerLocation {
  string topology_name = 1;
  // host:port or DNS address of scheduler which can be reached for runtime management.
  string http_endpoint = 2;
  // Optional links to topology's customized ui page
  // Example: link to the Mesos Slave UI page displaying all scheduled containers
  repeated string job_page_link = 3;
}

//
// Interfaces called by scheduler
//
message KillTopologyRequest {
  string topology_name = 1;
}

message RestartTopologyRequest {
  string topology_name = 1;
  // container_index would be -1 if no container is specified to restart
  // That means we would restart all containers.
  int32 container_index = 2;
}

message UpdateTopologyRequest {
  heron.proto.system.PackingPlan currentPackingPlan = 1;
  heron.proto.system.PackingPlan proposedPackingPlan = 2;
}

message SchedulerResponse {
  heron.proto.system.Status status = 1;
}
